# pronko

./: app.py  flake.nix  pyproject.toml  requirements.txt
