[project]
# name = "pronko"
# version = "0.1.0"
description = "AI-powered Korean Pronunciation Analyzer"
requires-python = ">=3.9"

# 여기에 우리가 직접 설치하려는 최상위 라이브러리들을 명시합니다.
dependencies = [
    "torch",
    "torchaudio",
    "transformers",
    "librosa",
    "soundfile",
    # "g2pk",
    "python-levenshtein",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "streamlit",
    "streamlit-mic-recorder",
    "poethepoet",
    "pytest",
    "openai"
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.poe.tasks]
test = "pytest"
serve = "streamlit run app.py"
serve-headless = "streamlit run app.py --server.headless true"
format = "black ."
